# 2s-AGCN

./: .gitignore  PROJECT_MEMORY.md  README.md  pyproject.toml
conf/skeleton/: ntu60_xview_agcn_bone.yaml  ntu60_xview_agcn_joint.yaml  ntu60_xview_agcn_two_stream_sum.yaml
conf/two_stream_agcn/: legacy_ntu_rgbd60_xsub.yaml  ntu60_xview_agcn_bone_foundry.yaml  ntu60_xview_agcn_bone_resume_foundry.yaml  ntu60_xview_agcn_joint_foundry.yaml  ntu60_xview_agcn_joint_resume_foundry.yaml  ntu60_xview_agcn_two_stream_sum_foundry.yaml  register.yaml
reports/: ntu60_xview_agcn_experiment_report.md
scripts/experiments/: eval_official_score_ensemble.py  sweep_official_alpha.py  train_offline_fusion_head.py
src/two_stream_agcn/: __init__.py  integration.py
src/two_stream_agcn/checkpoints/: __init__.py  remap.py
src/two_stream_agcn/data/: __init__.py  legacy.py
src/two_stream_agcn/models/: __init__.py  aagcn.py  agcn.py  common.py  graph.py  wrappers.py
tests/: test_checkpoint_remap.py  test_graph_models.py  test_legacy_data.py
