[project]
name = "two-stream-agcn-modern"
version = "0.1.0"
description = "Modern PyTorch port of official 2s-AGCN and AAGCN integrated with Foundry."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "foundry[logging]>=0.3.3",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tensorboardx>=2.6.5",
    "torch>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/two_stream_agcn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.uv.sources]
foundry = { git = "ssh://git@github.com/ArtichoKaleyard/Foundry.git", rev = "main" }
